Fixed the completely broken CSS

--- a/wp/a2/css/all_products.css
+++ b/wp/a2/css/all_products.css
@@ -1,5 +1,5 @@
 /*, .pageBody #videoServices, .pageBody #psychicServices*/
-.pageBody article {
+.pageBodyDualPage article {
 	min-width: 300px;
 	width: 30%;
 	float: left;
